WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48519
[Qt] Cross origin CSS style lookup through QWebElement is broken.
https://bugs.webkit.org/show_bug.cgi?id=48519
Summary
[Qt] Cross origin CSS style lookup through QWebElement is broken.
Jocelyn Turcotte
Reported
2010-10-28 06:38:12 PDT
As a consequence, tst_QWebFrame::setHtmlWithResource() and tst_QWebElement::style() fail. The tests fail since
r70335
which prevented the same use case to work through JavaScript. QWebElement should not be limited to this.
Attachments
Patch
(1.99 KB, patch)
2010-10-28 06:48 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2010-10-28 06:48:50 PDT
Created
attachment 72183
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2010-10-28 06:52:22 PDT
Comment on
attachment 72183
[details]
Patch Why no tests?
Andreas Kling
Comment 3
2010-10-28 06:54:55 PDT
Comment on
attachment 72183
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=72183&action=review
r=me
> WebKit/qt/ChangeLog:12 > +
Please add a comment about the now-passing tests.
Jocelyn Turcotte
Comment 4
2010-11-04 05:50:57 PDT
Committed
r70778
: <
http://trac.webkit.org/changeset/70778
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug