[Qt] QWebElement: Don't retrieve CSS rules through DOMWindow. https://bugs.webkit.org/show_bug.cgi?id=48519

Reviewed by Andreas Kling.

JavaScript is prevented from retrieving cross-domain CSS rules since r70335.
This patch allow QWebElement to retrive style without this limitation
by asking the Document directly instead of going through DOMWindow.

Fixes:
- tst_QWebFrame::setHtmlWithResource()
- tst_QWebElement::style()

* Api/qwebelement.cpp:
(QWebElement::styleProperty):

Canonical link: https://commits.webkit.org/61292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70778 268f45cc-cd09-0410-ab3c-d52691b4dbfc